--- a/assets/scss/tailwind.scss
+++ b/assets/scss/tailwind.scss
@@ -7,3 +7,28 @@ body,
 #__nuxt {
   height: 100% !important;
 }
+
+body, .ant-layout {
+  background-color: #fcfcfc !important;
+  color: rgba(4, 0, 0, 0.8) !important;
+}
+
+/// Correct the centering style of the icon inner button
+button.ant-pagination-item-link {
+  display: flex !important;
+  align-items: center;
+
+  span {
+    align-self: center;
+    margin: auto;
+  }
+}
+
+button.ant-btn {
+  display: flex !important;
+  align-items: baseline !important;
+}
+
+button.ant-btn-circle {
+  display: block !important;
+}
