[ts] refactor: Label with-icon button to narrow the style

--- a/assets/scss/tailwind.scss
+++ b/assets/scss/tailwind.scss
@@ -24,16 +24,7 @@ button.ant-pagination-item-link {
   }
 }
 
-button.ant-btn {
+button.ant-btn-with-icon {
   display: flex !important;
   align-items: baseline !important;
-}
-
-.ant-modal-footer button.ant-btn,
-.ant-result-extra button.ant-btn {
-  display: inline-block !important;
-}
-
-button.ant-btn-circle {
-  display: block !important;
 }
