--- a/assets/scss/tailwind.scss
+++ b/assets/scss/tailwind.scss
@@ -28,3 +28,8 @@ button.ant-btn-with-icon {
   display: flex !important;
   align-items: baseline !important;
 }
+
+.ant-message-custom-content {
+  display: flex !important;
+  align-items: baseline !important;
+}
