--- a/assets/scss/antd.scss
+++ b/assets/scss/antd.scss
@@ -14,7 +14,7 @@
   }
 
   .ant-layout-sider-trigger {
-    background-color: black !important;
+    background-color: #141414 !important;
     color: #fff !important;
   }
 
